--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
-  "name": "goit-node-js",
+  "name": "telegram_bot",
   "version": "1.0.0",
-  "description": "goit-node-js",
+  "description": "telegram_bot",
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "get-all": "node src/scripts/getAllContacts",
-    "generate": "node src/scripts/generateContacts.js",
-    "add-one": "node src/scripts/addOneContact.js",
-    "count": "node src/scripts/countContacts.js",
-    "remove-last": "node src/scripts/removeLastContact.js",
-    "remove-all": "node src/scripts/removeAllContacts.js"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +14,10 @@
     "@eslint/js": "^9.2.0",
     "@faker-js/faker": "^8.4.1",
     "eslint": "^9.2.0",
-    "globals": "^15.1.0"
+    "globals": "^15.1.0",
+    "nodemon": "^3.1.7"
+  },
+  "dependencies": {
+    "telegraf": "^4.16.3"
   }
 }
